--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<color android:color="@color/googleDarkBlue"
+<color android:color="#ffffff"
     xmlns:android="http://schemas.android.com/apk/res/android" />
